[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/AudioManager/demo/demo.gd" type="Script" id=1]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Play" type="Button" parent="."]
margin_left = 275.0
margin_top = 200.0
margin_right = 365.0
margin_bottom = 220.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopNow" type="Button" parent="."]
margin_left = 275.0
margin_top = 235.0
margin_right = 365.0
margin_bottom = 255.0
text = "Stop (now)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayDelayed" type="Button" parent="."]
margin_left = 380.0
margin_top = 200.0
margin_right = 480.0
margin_bottom = 220.0
text = "Play (delayed)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stop" type="Button" parent="."]
margin_left = 380.0
margin_top = 235.0
margin_right = 481.0
margin_bottom = 255.0
text = "Stop (smooth)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 275.0
margin_top = 120.0
margin_right = 480.0
margin_bottom = 175.0
text = "MusicManager only plays one audio track at a time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaySfx" type="Button" parent="."]
margin_left = 531.0
margin_top = 200.0
margin_right = 621.0
margin_bottom = 220.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayPitchedSfx" type="Button" parent="."]
margin_left = 636.0
margin_top = 200.0
margin_right = 736.0
margin_bottom = 220.0
text = "Play (pitched)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 530.0
margin_top = 120.0
margin_right = 755.0
margin_bottom = 175.0
text = "SFXManager plays multiple audio tracks at once and addionally supports pitch changing"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="StopNow" to="." method="_on_StopButtonNow_pressed"]
[connection signal="pressed" from="PlayDelayed" to="." method="_on_PlayDelayed_pressed"]
[connection signal="pressed" from="Stop" to="." method="_on_StopButton_pressed"]
[connection signal="pressed" from="PlaySfx" to="." method="_on_PlaySfx_pressed"]
[connection signal="pressed" from="PlayPitchedSfx" to="." method="_on_PlayPitchedSfx_pressed"]
